# Strange-Machine

./: .clang-format  .gitignore  CMakeLists.txt
StrangeMachine/: CMakeLists.txt
StrangeMachine/animation/: smAnimation.c  smAnimation.h  smPose.c  smPose.h
StrangeMachine/audio/: smAudio.c  smAudio.h
StrangeMachine/core/: smArena.c  smArena.h  smArray.c  smArray.h  smBase.h  smBaseMemory.c  smBaseMemory.h  smCore.c  smCore.h  smFS.c  smHandlePool.c  smHandlePool.h  smHashMap.inl  smIO.c  smLayer.c  smLayer.h  smLog.c  smLog.h  smMM.c  smMM.h  smPRNG.c  smRefCount.h  smResource.c  smResource.h  smString.c  smString.h  smThread.c  smThread.h
StrangeMachine/ecs/: smECS.c  smECS.h  smScene.c  smScene.h  smStage.c  smStage.h
StrangeMachine/effects/: smShake.c  smShake.h
StrangeMachine/math/: smCollision.c  smCollision.h  smMath.h  smShape.c  smShape.h
StrangeMachine/particle/: smParticle.c  smParticle.h
StrangeMachine/renderer/: smRenderer.c  smRenderer.h  toshibasat8x8.h
TestSites/renderer/: CMakeLists.txt  common.c  common.h  main.c  scene01.c  scene01.h
TestSites/terror-em-sl/: CMakeLists.txt  main.c
Tools/conv/: CMakeLists.txt  main.c
